--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -1,10 +1,145 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-<title>PhoneGap</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<link rel="shortcut icon" href="icons/colors_icon-16x16.ico" />
+<link rel="apple-touch-icon" href="icons/colors_icon-128x128.png" />
+
+<!-- startup image for web apps - iPad - landscape (748x1024)
+     Note: iPad landscape startup image has to be exactly 748x1024
+     pixels (portrait, with contents rotated).-->
+<link rel="apple-touch-startup-image"
+      href="icons/colors_splash-748x1024.png"
+      media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:landscape)" />
+<!-- startup image for web apps - iPad - portrait (768x1004) -->
+<link rel="apple-touch-startup-image"
+      href="icons/colors_splash-768x1004.png"
+      media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)" />
+<!-- startup image for web apps - iPhone (320x460) -->
+<link rel="apple-touch-startup-image"
+      href="icons/colors_splash-320x460.png"
+      media="screen and (max-device-width: 320px)" />
+<!-- startup image for web apps - iPhone retina -->
+<link rel="apple-touch-startup-image"
+      href="icons/colors_splash-640x920.png"
+      media="screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" />
+
+<title>Colors for Nell</title>
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
+<style type="text/css">
+html,body { width:100%; height:100%; margin:0px; border:none;}
+iframe {
+  position: absolute;
+  left: 0px; right: 0px;
+  top: 0px; bottom: 0px;
+  border: none;
+  margin: 0;
+  width: 100%; height: 100%;
+}
+#wrapper {
+  position: absolute;
+  top: 44px; bottom: 0px;
+  left: 0px; right: 0px;
+}
+#toolbar {
+  position: absolute;
+  height: 44px;
+  width: 100%;
+  top: 0px; left: 0px;
+  /* from http://wiki.sugarlabs.org/go/Human_Interface_Guidelines */
+  background: #404040; /* "toolbar grey" */
+  overflow: hidden;
+}
+
+#toolbar .buttons {
+  position: relative;
+  margin-left: 10px;
+  margin-top: 7px;
+  white-space: nowrap;
+}
+
+#toolbar .swatch, #toolbar .icon {
+  display: inline-block;
+  margin-left: 5px;
+  padding: 0;
+}
+
+#toolbar .icon {
+  width: 30px;
+  height: 30px;
+  border: none;
+  opacity: 0.9;
+}
+#toolbar .icon:hover {
+  opacity: 1.0;
+}
+#toolbar .play {
+  background: url('icons/play.png');
+}
+#toolbar .play.playing {
+  background: url('icons/forward.png');
+}
+#toolbar .undo {
+  background: url('icons/undo.png');
+}
+#toolbar .redo {
+  background: url('icons/redo.png');
+}
+#toolbar .hard {
+  background: url('icons/hard.png');
+}
+#toolbar .soft {
+  background: url('icons/soft.png');
+}
+#toolbar .save {
+  background: url('icons/save.png');
+}
+
+#toolbar .hard, #toolbar .play, #toolbar .red, #toolbar input, #toolbar .save {
+  margin-left: 10px;
+}
+
+#toolbar .swatch {
+  width: 26px;
+  height: 26px;
+  border: 2px solid #a6a6a6;
+  background: url('icons/trans.png');
+  background-position-x: 1px;
+  background-position-y: 1px;
+}
+#toolbar .swatch:hover {
+  border-color: #ddd;
+}
+#toolbar .swatch > span {
+  display: block;
+  width: 26px; height: 26px;
+}
+.swatch.red > span { background: red; }
+.swatch.orange > span { background: orange; }
+.swatch.yellow > span { background: yellow; }
+.swatch.green > span { background: green; }
+.swatch.blue > span { background: blue; }
+.swatch.indigo > span { background: indigo; }
+.swatch.violet > span { background: violet; }
+.swatch.white > span { background: white; }
+.swatch.brown > span { background: brown; }
+.swatch.black > span { background: black; }
+
+#loading { text-align:center; font-weight: bold; font: 30px serif; }
+</style>
+<script src="require.js" data-main="index.js"
+        type="text/javascript"></script>
 </head>
 <body>
-<h1>Hello World</h1>
+<div id="toolbar">
+ <div id="toolbarButtons" class="buttons">
+ </div>
+</div>
+
+<div id="wrapper">
+<p id="loading">Loading...</p>
+</div>
+
 </body>
 </html>
