Add better button click / hover effect.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -22,7 +22,9 @@
  <div id="clouds"></div>
 </div>
 <div id="buttons">
- <div id="button1" class="yellow"></div><div id="button2" class="black"></div><div id="button3" class="orange"></div><div id="button4" class="lilac"></div>
+ <a id="button1" class="yellow" href="#"></a><a id="button2"
+  class="black" href="#"></a><a id="button3" class="orange"
+  href="#"></a><a id="button4" class="lilac" href="#"></a>
 </div>
   
 </body>
