Basic balloon-floating-skyward animation.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -14,18 +14,12 @@
 <div id="game" class="grass">
  <div id="background"></div>
  <div id="nell"></div>
- <div id="balloons">
-   <div id="balloon1" class="black"></div>
- </div>
+ <div id="balloons"></div>
  <div id="hero"></div>
  <div id="foreground"></div>
  <div id="clouds"></div>
 </div>
-<div id="buttons">
- <a id="button1" class="yellow" href="#"></a><a id="button2"
-  class="black" href="#"></a><a id="button3" class="orange"
-  href="#"></a><a id="button4" class="lilac" href="#"></a>
-</div>
+<div id="buttons"></div>
   
 </body>
 </html>
