--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -5,6 +5,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+<link rel="shortcut icon" href="images/icon-16.ico" />
+<link rel="apple-touch-icon" href="images/icon-128.png" />
 <title>Balloons for Nell</title>
 <link rel="stylesheet" href="style.css" />
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
