Add iOS splash screens.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -7,6 +7,18 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 <link rel="shortcut icon" href="images/icon-16.ico" />
 <link rel="apple-touch-icon" href="images/icon-128.png" />
+<!-- startup image for web apps - iPad - portrait (768x1004) -->
+<link rel="apple-touch-startup-image"
+      href="images/splash-768x1004.png"
+      media="screen and (min-device-width: 481px) and (max-device-width: 1024px) and (orientation:portrait)" />
+<!-- startup image for web apps - iPhone (320x460) -->
+<link rel="apple-touch-startup-image"
+      href="images/splash-320x460.png"
+      media="screen and (max-device-width: 320px)" />
+<!-- startup image for web apps - iPhone retina -->
+<link rel="apple-touch-startup-image"
+      href="images/splash-640x920.png"
+      media="screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" />
 <title>Balloons for Nell</title>
 <link rel="stylesheet" href="style.css" />
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
