Add keyframe animation of Nell, the bug, and the squirting balloon.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -27,7 +27,7 @@
 <body>
 <div id="game" class="grass">
  <div id="background"></div>
- <div id="nell"></div>
+ <div id="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
  <div id="balloons"></div>
  <div id="hero"></div>
  <div id="foreground"></div>
