Add award images.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -30,7 +30,12 @@
  <div id="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
  <div id="balloons"></div>
  <div id="hero"></div>
- <div id="foreground"></div>
+ <div id="sprouts">
+    <div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div>
+ </div>
+ <div id="foreground">
+    <div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div>
+ </div>
  <div id="clouds"></div>
 </div>
 <div id="buttons"></div>
