--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -31,10 +31,17 @@
  <div id="balloons"></div>
  <div id="hero"></div>
  <div id="sprouts">
-    <div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div>
+    <div class="award a1"></div><div class="award a2"></div><div
+         class="award a3"></div><div class="award a4"></div><div
+         class="award a5"></div><div class="award a6"></div><div
+         class="award a7"></div><div class="award a8"></div>
  </div>
  <div id="foreground">
-    <div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div><div class="award"></div>
+    <div class="award a1"></div><div class="award a2"></div><div
+         class="award a3"></div><div class="award a4"></div><div
+         class="award a5"></div><div class="award a6"></div><div
+         class="award a7"></div><div class="award a8"></div><div
+         class="award flex"></div>
  </div>
  <div id="clouds"></div>
 </div>
