Update to master 87fe0a868c5c5c4470958ab7db007e732474d2c3

--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
  <div id="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
  <div id="balloons"></div>
  <div id="hero"></div>
- <div id="foreground"></div>
+ <div id="sprouts">
+    <div class="award a1"></div><div class="award a2"></div><div
+         class="award a3"></div><div class="award a4"></div><div
+         class="award a5"></div><div class="award a6"></div><div
+         class="award a7"></div><div class="award a8"></div>
+ </div>
+ <div id="foreground">
+    <div class="award a1"></div><div class="award a2"></div><div
+         class="award a3"></div><div class="award a4"></div><div
+         class="award a5"></div><div class="award a6"></div><div
+         class="award a7"></div><div class="award a8"></div><div
+         class="award flex"></div>
+ </div>
  <div id="clouds"></div>
 </div>
 <div id="buttons"></div>
