--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -25,9 +25,27 @@
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
 <body>
-<div id="game" class="grass">
- <div id="background"></div>
- <div id="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
+<div id="game"><div id="level" class="grass">
+ <div id="background"><div class="stars"></div></div>
+ <div id="nell">
+  <div class="ground">
+   <div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
+  </div>
+  <div class="troposphere">
+   <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div></div>
+   <div class="hotair"></div>
+  </div>
+  <div class="stratosphere">
+   <div class="jet1"></div>
+   <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
+   <div class="jet2"></div>
+  </div>
+  <div class="mesosphere">
+   <div class="astronaut1"></div>
+   <div class="nellscaler"><div class="nell"><div class="head"></div></div></div>
+   <div class="astronaut2"></div>
+  </div>
+ </div>
  <div id="balloons"></div>
  <div id="sprouts">
     <div class="award a1"></div><div class="award a2"></div><div
@@ -43,8 +61,13 @@
          class="award a7"></div><div class="award a8"></div><div
          class="award flex"></div>
  </div>
- <div id="clouds"></div>
-</div>
+ <div id="clouds">
+  <div class="troposphere"></div>
+  <div class="stratosphere"></div>
+  <div class="mesosphere"></div>
+  <div class="stars"></div>
+ </div>
+</div></div>
 <div id="buttons"></div>
   
 </body>
