--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -26,7 +26,21 @@
 </head>
 <body>
 <div id="game"><div id="level" class="grass">
- <div id="background"><div class="stars"></div></div>
+ <div id="background">
+  <div class="troposphere">
+   <div class="cloud c2"></div>
+  </div>
+  <div class="stratosphere">
+   <div class="cloud c1"></div>
+   <div class="cloud c2"></div>
+   <div class="cloud c3"></div>
+  </div>
+  <div class="mesosphere">
+   <div class="stars"></div>
+   <div class="satellite1"></div>
+   <div class="satellite2"></div>
+  </div>
+ </div>
  <div id="nell">
   <div class="ground">
    <div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
