--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -67,22 +67,27 @@
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div>
  </div>
- <div id="hero"></div>
- <div id="foreground">
-    <div class="award a1"></div><div class="award a2"></div><div
-         class="award a3"></div><div class="award a4"></div><div
-         class="award a5"></div><div class="award a6"></div><div
-         class="award a7"></div><div class="award a8"></div><div
-         class="award flex"></div>
- </div>
  <div id="clouds">
+  <div class="bug"></div>
+  <div class="grass"></div>
   <div class="troposphere"></div>
   <div class="stratosphere"></div>
   <div class="mesosphere"></div>
   <div class="stars"></div>
  </div>
+ <div id="awards">
+   <div class="strip">
+    <div class="award a1"></div><div class="award a2"></div><div
+         class="award a3"></div><div class="award a4"></div><div
+         class="award a5"></div><div class="award a6"></div><div
+         class="award a7"></div><div class="award a8"></div><div
+         class="award flex"></div>
+   </div>
+ </div>
 </div></div>
 <div id="buttons"></div>
+<div id="mask"></div>
+<div id="video"></div>
   
 </body>
 </html>
