--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -10,23 +10,12 @@ require([], function() {
 });
 </script>
 <style type="text/css">
-#level {
-  -webkit-transform: translate3d(0,0%,0);/* xxx for testing */
-}
 .test #level {
   height: 4520px; width: 800px;
   -webkit-transform-origin: bottom left;
   -webkit-transform: scale3d(0.13,0.13,1);
 }
-.trop #level {
-  -webkit-transform: translate3d(0,25%,0);/* xxx for testing */
-}
-.strat #level {
-  -webkit-transform: translate3d(0,50%,0);/* xxx for testing */
-}
-.meso #level {
-  -webkit-transform: translate3d(0,75%,0);/* xxx for testing */
-}
+#b0 { -webkit-transform: translate3d(100px,100px,0); }
 </style>
 </head>
 
@@ -66,30 +55,35 @@ require([], function() {
    <div class="astronaut2"></div>
   </div>
  </div>
- <div id="balloons"><div id="b0" class="orange"></div></div>
+ <div id="balloons"><div id="b0" class="orange"><div></div></div></div>
  <div id="sprouts">
     <div class="award a1 show"></div><div class="award a2"></div><div
          class="award a3"></div><div class="award a4"></div><div
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div>
  </div>
- <div id="hero"></div>
- <div id="foreground">
-    <div class="award a1 show"></div><div class="award a2 show"></div><div
-         class="award a3"></div><div class="award a4"></div><div
-         class="award a5"></div><div class="award a6"></div><div
-         class="award a7"></div><div class="award a8"></div>
- </div>
  <div id="clouds">
+  <div class="bug"></div>
+  <div class="grass"></div>
   <div class="troposphere"></div>
   <div class="stratosphere"></div>
   <div class="mesosphere"></div>
   <div class="stars"></div>
  </div>
+ <div id="awards">
+   <div class="strip">
+    <div class="award a1 show"></div><div class="award a2 show"></div><div
+         class="award a3"></div><div class="award a4"></div><div
+         class="award a5"></div><div class="award a6"></div><div
+         class="award a7"></div><div class="award a8"></div>
+   </div>
+ </div>
 </div></div>
 <div id="buttons">
 <a class="yellow"></a><a class="lilac"></a><a class="black"></a><a class="orange"></a>
 </div>
+<div id="mask"></div>
+<div id="video"></div>
 
 </body>
 </html>
