Add payloads carried by balloons, hack in correct payloads for 1st level.

--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -15,7 +15,7 @@ require([], function() {
   -webkit-transform-origin: bottom left;
   -webkit-transform: scale3d(0.13,0.13,1);
 }
-#b0 { -webkit-transform: translate3d(100px,100px,0); }
+#b0 { -webkit-transform: translate3d(100px,-100px,0); }
 </style>
 </head>
 
@@ -55,7 +55,7 @@ require([], function() {
    <div class="astronaut2"></div>
   </div>
  </div>
- <div id="balloons"><div id="b0" class="orange"><div></div></div></div>
+ <div id="balloons"><div id="b0" class="orange"><div class="payload"></div><div class="balloon"></div></div></div>
  <div id="sprouts">
     <div class="award a1 show"></div><div class="award a2"></div><div
          class="award a3"></div><div class="award a4"></div><div
