--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -24,7 +24,7 @@
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
-<body>
+<body class="game">
 <div id="game"><div id="level" class="grass">
  <div id="background">
   <div class="troposphere">
@@ -41,23 +41,29 @@
    <div class="satellite2"></div>
   </div>
  </div>
- <div id="nell">
+ <div id="nell" class="nells">
   <div class="ground">
    <div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
   </div>
   <div class="troposphere">
-   <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div></div>
-   <div class="hotair"></div>
+   <div class="hotair">
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
   </div>
   <div class="stratosphere">
-   <div class="jet1"></div>
-   <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
-   <div class="jet2"></div>
+    <div class="jet">
+     <div class="background"></div>
+     <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
+     <div class="foreground"></div>
+    </div>
   </div>
   <div class="mesosphere">
-   <div class="astronaut1"></div>
-   <div class="nellscaler"><div class="nell"><div class="head"></div></div></div>
-   <div class="astronaut2"></div>
+   <div class="astronaut">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
   </div>
  </div>
  <div id="balloons"></div>
@@ -86,6 +92,52 @@
  </div>
 </div></div>
 <div id="buttons"></div>
+
+<div id="menu">
+ <div class="level grass">
+  <div class="background">
+    <div class="mesosphere">
+      <div class="stars"></div>
+    </div>
+  </div>
+ </div>
+ <div class="nells">
+  <div class="ground">
+   <div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
+  </div>
+  <div class="troposphere">
+   <div class="hotair">
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+  <div class="stratosphere">
+   <div class="jet">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+  <div class="mesosphere">
+   <div class="astronaut">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+ </div><!-- end of nells -->
+ <div class="sprout"></div>
+ <div class="stars">
+  <div class="ground"></div>
+  <div class="troposphere"></div>
+  <div class="stratosphere"></div>
+  <div class="mesosphere"></div>
+ </div>
+ <div class="clouds">
+  <div class="grass"></div>
+ </div>
+</div>
+
 <div id="mask"></div>
 <div id="video"></div>
   
