--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -25,7 +25,7 @@
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
 <body class="game">
-<div id="game"><div id="level" class="grass">
+<div id="game"><div id="level" class="level">
  <div id="background">
   <div class="troposphere">
    <div class="cloud c2"></div>
@@ -94,7 +94,7 @@
 <div id="buttons"></div>
 
 <div id="menu">
- <div class="level grass">
+ <div class="level">
   <div class="background">
     <div class="mesosphere">
       <div class="stars"></div>
