--- a/index.html
+++ b/index.html
@@ -24,10 +24,48 @@
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
-<body>
-<div id="game" class="grass">
- <div id="background"></div>
- <div id="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
+<body class="game">
+<div id="game"><div id="level" class="level">
+ <div id="background">
+  <div class="troposphere">
+   <div class="cloud c2"></div>
+  </div>
+  <div class="stratosphere">
+   <div class="cloud c1"></div>
+   <div class="cloud c2"></div>
+   <div class="cloud c3"></div>
+  </div>
+  <div class="mesosphere">
+   <div class="stars"></div>
+   <div class="satellite1"></div>
+   <div class="satellite2"></div>
+  </div>
+ </div>
+ <div id="nell" class="nells">
+  <div class="ground">
+   <div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
+  </div>
+  <div class="troposphere">
+   <div class="hotair">
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+  <div class="stratosphere">
+    <div class="jet">
+     <div class="background"></div>
+     <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
+     <div class="foreground"></div>
+    </div>
+  </div>
+  <div class="mesosphere">
+   <div class="astronaut">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+ </div>
  <div id="balloons"></div>
  <div id="sprouts">
     <div class="award a1"></div><div class="award a2"></div><div
@@ -35,17 +73,73 @@
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div>
  </div>
- <div id="hero"></div>
- <div id="foreground">
+ <div id="clouds">
+  <div class="bug"></div>
+  <div class="grass"></div>
+  <div class="troposphere"></div>
+  <div class="stratosphere"></div>
+  <div class="mesosphere"></div>
+  <div class="stars"></div>
+ </div>
+ <div id="awards">
+   <div class="strip">
     <div class="award a1"></div><div class="award a2"></div><div
          class="award a3"></div><div class="award a4"></div><div
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div><div
          class="award flex"></div>
+   </div>
  </div>
- <div id="clouds"></div>
-</div>
+</div></div>
 <div id="buttons"></div>
+
+<div id="menu">
+ <div class="level">
+  <div class="background">
+    <div class="mesosphere">
+      <div class="stars"></div>
+    </div>
+  </div>
+ </div>
+ <div class="nells">
+  <div class="ground">
+   <div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
+  </div>
+  <div class="troposphere">
+   <div class="hotair">
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+  <div class="stratosphere">
+   <div class="jet">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+  <div class="mesosphere">
+   <div class="astronaut">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+ </div><!-- end of nells -->
+ <div class="sprout"></div>
+ <div class="stars">
+  <div class="ground"></div>
+  <div class="troposphere"></div>
+  <div class="stratosphere"></div>
+  <div class="mesosphere"></div>
+ </div>
+ <div class="clouds">
+  <div class="grass"></div>
+ </div>
+</div>
+
+<div id="mask"></div>
+<div id="video"></div>
   
 </body>
 </html>
