--- a/test.html
+++ b/test.html
@@ -6,65 +6,142 @@
 <link rel="stylesheet" href="style.css" />
 <script type="text/javascript" src="require.js"></script>
 <script type="text/javascript">
-require(['./lawnchair/lawnchair'], function(Lawnchair) {
-Lawnchair({name:'test4'}, function() {
-  var lawnchair = this;
-console.log('hmm');
-  lawnchair.save({key:'foo', value:'bar'}, function() {
-    console.log('whoo');
-  });
-});
+require([], function() {
 });
 </script>
 <style type="text/css">
-.grass #sprouts .award {
-  /* was: 90px, w/ 5px left/right margins */
-  /* width: 238px; margin-left:-20px; margin-right:-118px; */
+.test #level {
+  height: 4520px; width: 800px;
+  -webkit-transform-origin: bottom left;
+  -webkit-transform: scale(0.13);
 }
-@-webkit-keyframes clouds-drift {
-  0% {
-    background-position: 0px 0px;
-  }
-  100% {
-    background-position: 1240px 0px;
-  }
+.test #menu {
+  height: 1280px; width: 800px;
+  -webkit-transform-origin: top left;
+  -webkit-transform: scale(0.6);
 }
-.grass #clouds {
-  -webkit-animation: clouds-drift 180s infinite normal none linear;
-}
-/*
-// smallest: 34x 69 (.143,.078)
-// small:    51x104 (.215,.118)
-// original: 68x138 (.287,.156) \ 5 steps ~= 25px
-// 3x:      203x415 (.857,.469) \ 16 steps ~= 25px each
-// large:   237x885 (1.00,1.00)
-*/
+
+#b0 { -webkit-transform: translate3d(100px,-100px,0); }
 </style>
 </head>
 
-<body>
-<div id="game" class="grass">
- <div id="background"></div>
- <div id="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
- <div id="balloons"><div id="b0" class="orange"></div></div>
- <div id="hero"></div>
+<body class="anim n9 menu">
+<div id="game"><div id="level" class="grass mesosphere">
+ <div id="background">
+  <div class="troposphere">
+   <div class="cloud c2"></div>
+  </div>
+  <div class="stratosphere">
+   <div class="cloud c1"></div>
+   <div class="cloud c2"></div>
+   <div class="cloud c3"></div>
+  </div>
+  <div class="mesosphere">
+   <div class="stars"></div>
+   <div class="satellite1"></div>
+   <div class="satellite2"></div>
+  </div>
+ </div>
+ <div id="nell" class="nells">
+  <div class="ground">
+   <div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
+  </div>
+  <div class="troposphere">
+   <div class="hotair">
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+  <div class="stratosphere">
+    <div class="jet">
+     <div class="background"></div>
+     <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
+     <div class="foreground"></div>
+    </div>
+  </div>
+  <div class="mesosphere">
+   <div class="astronaut">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+ </div>
+ <div id="balloons"><div id="b0" class="orange"><div class="payload"></div><div class="balloon"></div></div></div>
  <div id="sprouts">
     <div class="award a1 show"></div><div class="award a2"></div><div
          class="award a3"></div><div class="award a4"></div><div
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div>
  </div>
- <div id="foreground">
+ <div id="clouds">
+  <div class="bug"></div>
+  <div class="grass"></div>
+  <div class="troposphere"></div>
+  <div class="stratosphere"></div>
+  <div class="mesosphere"></div>
+  <div class="stars"></div>
+ </div>
+ <div id="awards">
+   <div class="strip">
     <div class="award a1 show"></div><div class="award a2 show"></div><div
          class="award a3"></div><div class="award a4"></div><div
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div>
+   </div>
  </div>
- <div id="clouds"></div>
-</div>
+</div></div>
 <div id="buttons">
 <a class="yellow"></a><a class="lilac"></a><a class="black"></a><a class="orange"></a>
 </div>
+
+<div id="menu">
+ <div class="level grass">
+  <div class="background">
+    <div class="mesosphere">
+      <div class="stars"></div>
+    </div>
+  </div>
+ </div>
+ <div class="nells">
+  <div class="ground">
+   <div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div>
+  </div>
+  <div class="troposphere">
+   <div class="hotair">
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="body"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+  <div class="stratosphere">
+   <div class="jet">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="hair"></div><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+  <div class="mesosphere">
+   <div class="astronaut">
+    <div class="background"></div>
+    <div class="nellscaler"><div class="nell"><div class="head"></div></div></div>
+    <div class="foreground"></div>
+   </div>
+  </div>
+ </div><!-- end of nells -->
+ <div class="sprout"></div>
+ <div class="stars">
+  <div class="ground"><div class="star"></div></div>
+  <div class="troposphere"><div class="star"></div></div>
+  <div class="stratosphere"><div class="star"></div></div>
+  <div class="mesosphere"><div class="star"></div></div>
+ </div>
+ <div class="clouds">
+  <div class="grass"></div>
+ </div>
+</div>
+
+<div id="mask"></div>
+<div id="video"></div>
 
 </body>
 </html>
