Add Fardad's "please rotate me" animation.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -140,6 +140,10 @@
 
 <div id="mask"></div>
 <div id="video"></div>
+<div id="rotate">
+ <div class="background"></div>
+ <div class="foreground"></div>
+</div>
   
 </body>
 </html>
