Update to master 8d0bd820e9030a7bc675def90cacf9fc8747c172. ('rotate me')

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
-<body class="game">
+<body>
 <div id="game"><div id="level" class="level">
  <div id="background">
   <div class="troposphere">
@@ -140,6 +140,10 @@
 
 <div id="mask"></div>
 <div id="video"></div>
+<div id="rotate">
+ <div class="background"></div>
+ <div class="foreground"></div>
+</div>
   
 </body>
 </html>
