--- a/test.html
+++ b/test.html
@@ -25,7 +25,7 @@ require([], function() {
 </style>
 </head>
 
-<body class="anim n9 menu">
+<body class="anim n9 menu rotate">
 <div id="game"><div id="level" class="grass mesosphere">
  <div id="background">
   <div class="troposphere">
@@ -142,6 +142,10 @@ require([], function() {
 
 <div id="mask"></div>
 <div id="video"></div>
+<div id="rotate">
+ <div class="background"></div>
+ <div class="foreground"></div>
+</div>
 
 </body>
 </html>
