Add 'yardstick' on left side of game screen (visible, not yet functional).

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -73,6 +73,29 @@
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div>
  </div>
+ <div id="ruler">
+   <div class="background"><div class="foreground"></div></div>
+   <div class="ground">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="troposphere">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="stratosphere">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="mesosphere">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+ </div>
  <div id="clouds">
   <div class="bug"></div>
   <div class="grass"></div>
