--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -25,8 +25,8 @@ require([], function() {
 </style>
 </head>
 
-<body class="anim n9 menu rotate">
-<div id="game"><div id="level" class="grass mesosphere">
+<body class="anim n9 game">
+<div id="game"><div id="level" class="grass troposphere">
  <div id="background">
   <div class="troposphere">
    <div class="cloud c2"></div>
@@ -73,6 +73,29 @@ require([], function() {
          class="award a3"></div><div class="award a4"></div><div
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div>
+ </div>
+ <div id="ruler">
+   <div class="background"><div class="foreground" style="height:33%"></div></div>
+   <div class="ground">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="troposphere">
+    <div class="stars one"></div>
+    <div class="stars two highlight"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="stratosphere">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="mesosphere">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
  </div>
  <div id="clouds">
   <div class="bug"></div>
