Rework menu design: use tags for selection, and stars for scoring the level.
Also: re-export white tags w/ greater background opacity.

Also: move height style of ruler foreground to the element's style attribute.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -116,13 +116,11 @@
 </div></div>
 <div id="buttons"></div>
 
-<div id="menu">
- <div class="level">
-  <div class="background">
-    <div class="mesosphere">
-      <div class="stars"></div>
-    </div>
-  </div>
+<div id="menu"><div class="level">
+ <div class="background">
+   <div class="mesosphere">
+     <div class="stars"></div>
+   </div>
  </div>
  <div class="nells">
   <div class="ground">
@@ -150,16 +148,32 @@
   </div>
  </div><!-- end of nells -->
  <div class="sprout"></div>
- <div class="stars">
-  <div class="ground"></div>
-  <div class="troposphere"></div>
-  <div class="stratosphere"></div>
-  <div class="mesosphere"></div>
+ <div class="awards">
+  <div class="ground">
+   <div class="stars">
+<span class="star"></span><span class="star"></span><span class="star"></span>
+   </div>
+  </div>
+  <div class="troposphere">
+   <div class="stars">
+<span class="star"></span><span class="star"></span><span class="star"></span>
+   </div>
+  </div>
+  <div class="stratosphere">
+   <div class="stars">
+<span class="star"></span><span class="star"></span><span class="star"></span>
+   </div>
+  </div>
+  <div class="mesosphere">
+   <div class="stars">
+<span class="star"></span><span class="star"></span><span class="star"></span>
+   </div>
+  </div>
  </div>
  <div class="clouds">
   <div class="grass"></div>
  </div>
-</div>
+</div></div>
 
 <div id="mask"></div>
 <div id="video"></div>
