--- a/index.html
+++ b/index.html
@@ -73,6 +73,29 @@
          class="award a5"></div><div class="award a6"></div><div
          class="award a7"></div><div class="award a8"></div>
  </div>
+ <div id="ruler">
+   <div class="background"><div class="foreground"></div></div>
+   <div class="ground">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="troposphere">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="stratosphere">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+   <div class="mesosphere">
+    <div class="stars one"></div>
+    <div class="stars two"></div>
+    <div class="stars three"></div>
+   </div>
+ </div>
  <div id="clouds">
   <div class="bug"></div>
   <div class="grass"></div>
@@ -93,13 +116,11 @@
 </div></div>
 <div id="buttons"></div>
 
-<div id="menu">
- <div class="level">
-  <div class="background">
-    <div class="mesosphere">
-      <div class="stars"></div>
-    </div>
-  </div>
+<div id="menu"><div class="level">
+ <div class="background">
+   <div class="mesosphere">
+     <div class="stars"></div>
+   </div>
  </div>
  <div class="nells">
   <div class="ground">
@@ -127,16 +148,32 @@
   </div>
  </div><!-- end of nells -->
  <div class="sprout"></div>
- <div class="stars">
-  <div class="ground"></div>
-  <div class="troposphere"></div>
-  <div class="stratosphere"></div>
-  <div class="mesosphere"></div>
+ <div class="awards">
+  <div class="ground">
+   <div class="stars">
+<span class="star"></span><span class="star"></span><span class="star"></span>
+   </div>
+  </div>
+  <div class="troposphere">
+   <div class="stars">
+<span class="star"></span><span class="star"></span><span class="star"></span>
+   </div>
+  </div>
+  <div class="stratosphere">
+   <div class="stars">
+<span class="star"></span><span class="star"></span><span class="star"></span>
+   </div>
+  </div>
+  <div class="mesosphere">
+   <div class="stars">
+<span class="star"></span><span class="star"></span><span class="star"></span>
+   </div>
+  </div>
  </div>
  <div class="clouds">
   <div class="grass"></div>
  </div>
-</div>
+</div></div>
 
 <div id="mask"></div>
 <div id="video"></div>
