Implement "cloud shade" to obscure all but the levels we've unlocked.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -171,6 +171,10 @@
   </div>
  </div>
  <div class="clouds">
+  <div class="cloudshade">
+    <div class="top"></div>
+    <div class="bottom"></div>
+  </div>
   <div class="grass"></div>
  </div>
 </div></div>
