--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
   </div>
  </div>
  <div class="clouds">
+  <div class="cloudshade">
+    <div class="top"></div>
+    <div class="bottom"></div>
+  </div>
   <div class="grass"></div>
  </div>
 </div></div>
