--- a/test.html
+++ b/test.html
@@ -118,7 +118,7 @@ require([], function() {
 <a class="yellow"></a><a class="lilac"></a><a class="black"></a><a class="orange"></a>
 </div>
 
-<div id="menu"><div class="level grass">
+<div id="menu"><div class="level grass exposed-troposphere">
  <div class="background">
    <div class="mesosphere">
      <div class="stars"></div>
@@ -177,8 +177,12 @@ require([], function() {
   </div>
  </div>
  <div class="clouds">
+  <div class="cloudshade">
+    <div class="top"></div>
+    <div class="bottom"></div>
+  </div>
   <div class="grass"></div>
- </div>
+  </div>
 </div></div>
 
 <div id="mask"></div>
