Fix bogus "zoom out when hidden #video element is touched" issue.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -180,7 +180,7 @@
 </div></div>
 
 <div id="mask"></div>
-<div id="video"></div>
+<div id="video"><div></div></div>
 <div id="rotate">
  <div class="background"></div>
  <div class="foreground"></div>
