--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -186,7 +186,7 @@ require([], function() {
 </div></div>
 
 <div id="mask"></div>
-<div id="video"></div>
+<div id="video"><div></div></div>
 <div id="rotate">
  <div class="background"></div>
  <div class="foreground"></div>
