First steps at implementing the end-of-level screen; reduce # awards to 6.
Six awards makes more room for the yardstick on the left of the screen.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -70,8 +70,7 @@
  <div id="sprouts">
     <div class="award a1"></div><div class="award a2"></div><div
          class="award a3"></div><div class="award a4"></div><div
-         class="award a5"></div><div class="award a6"></div><div
-         class="award a7"></div><div class="award a8"></div>
+         class="award a5"></div><div class="award a6"></div>
  </div>
  <div id="ruler">
    <div class="background"><div class="foreground"></div></div>
@@ -109,7 +108,6 @@
     <div class="award a1"></div><div class="award a2"></div><div
          class="award a3"></div><div class="award a4"></div><div
          class="award a5"></div><div class="award a6"></div><div
-         class="award a7"></div><div class="award a8"></div><div
          class="award flex"></div>
    </div>
  </div>
@@ -180,7 +178,7 @@
 </div></div>
 
 <div id="mask"></div>
-<div id="video"><div></div></div>
+<div id="video"><div class="inner"></div></div>
 <div id="rotate">
  <div class="background"></div>
  <div class="foreground"></div>
