CSS rule optimization.
Based on the principles found at:
https://developer.mozilla.org/en/Writing_Efficient_CSS

--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -26,7 +26,7 @@ require([], function() {
 </head>
 
 <body class="anim n9 menu">
-<div id="game"><div id="level" class="grass troposphere">
+<div id="game"><div id="level" class="level grass troposphere">
  <div id="background">
   <div class="troposphere">
    <div class="cloud c2"></div>
