--- a/test.html
+++ b/test.html
@@ -26,7 +26,7 @@ require([], function() {
 </head>
 
 <body class="anim n9 menu">
-<div id="game"><div id="level" class="grass troposphere">
+<div id="game"><div id="level" class="level grass troposphere">
  <div id="background">
   <div class="troposphere">
    <div class="cloud c2"></div>
