--- a/assets/www/test.html
+++ b/assets/www/test.html
@@ -25,7 +25,7 @@ require([], function() {
 </style>
 </head>
 
-<body class="anim n9 game video">
+<body class="anim n9 menu">
 <div id="game"><div id="level" class="level grass troposphere">
  <div id="background">
   <div class="troposphere">
@@ -180,7 +180,14 @@ require([], function() {
     <div class="bottom"></div>
   </div>
   <div class="grass"></div>
-  </div>
+ </div>
+ <div class="levelnav"><div class="inner">
+   <a class="prev"></a>
+   <div class="dot on"></div>
+   <div class="dot"></div>
+   <div class="dot"></div>
+   <a class="next"></a>
+ </div></div>
 </div></div>
 
 <div id="mask"></div>
