Update to master b71171117848d885707bfaf20577fb985e27e616.

--- a/test.html
+++ b/test.html
@@ -180,11 +180,24 @@ require([], function() {
     <div class="bottom"></div>
   </div>
   <div class="grass"></div>
-  </div>
+ </div>
+ <div class="levelnav"><div class="inner">
+   <a class="prev"></a>
+   <div class="dot on"></div>
+   <div class="dot"></div>
+   <div class="dot"></div>
+   <a class="next"></a>
+ </div></div>
 </div></div>
 
 <div id="mask"></div>
-<div id="video"><div class="inner"></div></div>
+<div id="video"><div class="inner">
+ <video>
+  <source src="video/SpaceBalloon1-1-400k128-2pass.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"' />
+  <source src="video/SpaceBalloon1-1-400k64.webm" type="video/webm" />
+ </video>
+ <a class="arrow" href="#"></a>
+</div></div>
 <div id="rotate">
  <div class="background"></div>
  <div class="foreground"></div>
