--- a/index.html
+++ b/index.html
@@ -175,6 +175,8 @@
   </div>
   <div class="grass"></div>
  </div>
+ <div class="levelnav"><div class="inner">
+ </div></div>
 </div></div>
 
 <div id="mask"></div>
