Update to dc0ce4cd8f1f61b90dd9a0ee11e98d1db9d2954f.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html manifest="offline.manifest" >
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
@@ -21,7 +21,6 @@
       media="screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" />
 <title>Balloons for Nell</title>
 <link rel="stylesheet" href="style.css" />
-<script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
 <script src="require.js" data-main="index.js" type="text/javascript"></script>
 </head>
 <body>
