Add dialog prompting to install as webapp on Firefox (if not already installed).

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -185,6 +185,14 @@
  <div class="background"></div>
  <div class="foreground"></div>
 </div>
+<div id="install">
+  <p>
+  Would you like to install a shortcut to Nell's Balloons on your
+  home screen?
+  </p>
+  <button autofocus" class="yes">Yes</button>
+  <button class="no">No</button>
+</div>
   
 </body>
 </html>
