Fix HTML typo in index.html app installation dialog.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -237,7 +237,7 @@ window.addEventListener('load', function(e) {
   Would you like to install a shortcut to Nell's Balloons on your
   home screen?
   </p>
-  <button autofocus" class="yes">Yes</button>
+  <button autofocus class="yes">Yes</button>
   <button class="no">No</button>
 </div>
 
