Make <title> element match what is set in the javascript.

--- a/assets/www/index.html
+++ b/assets/www/index.html
@@ -19,7 +19,7 @@
 <link rel="apple-touch-startup-image"
       href="images/splash-640x920.png"
       media="screen and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2)" />
-<title>Balloons for Nell</title>
+<title>Nell's Balloons</title>
 <link rel="stylesheet" href="appcacheui.css" />
 <link rel="stylesheet" href="style.css" />
 <script type="text/javascript" charset="utf-8" src="cordova-1.7.0.js"></script>
